--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <div id="board"></div>
     <div id="message"></div>
     <button id="restart-button">Reiniciar</button>
-    <script src="game.js"></script>
-    <script src="ui.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
